<?xml version="1.0"?>
<package format="1">
  <name>appservices</name>
  <version>0.0.1</version>
  <description>App specific services for template app</description>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hello_world</url> -->


  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="developer@todo.todo">developer</maintainer>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="author@todo.todo">author</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->

  <!-- Build-time related -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Run-time related -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Testing related -->
  <test_depend>gtest</test_depend>
  <build_depend>rostest</build_depend> 

</package>
